--- a/style/_banner.scss
+++ b/style/_banner.scss
@@ -41,6 +41,7 @@
         }
         .spinner
         {
+            background-color: $bg-primary;
             font-size: 1.4rem;
             position: absolute;
             bottom: 0;
