--- a/style/_text.scss
+++ b/style/_text.scss
@@ -14,3 +14,12 @@ h2{
     font-size: 2.4rem;
     margin-bottom: 2%;
 }
+
+h3{
+    font-size: 2rem;
+    margin-top: 2%;
+}
+
+h4{
+    font-size: 1.8rem;
+}
