--- a/style/input.scss
+++ b/style/input.scss
@@ -12,6 +12,24 @@
     }
 }
 
+input
+{
+    padding: 1%;
+    width: 20%;
+    border-radius: 5px;
+    border: none;
+}
+
+input[type="submit"]
+{
+    width: 10%;
+    background: $content-secondary;
+    color: $content-primary;
+    font-weight: 700;
+    
+
+}
+
 @media screen and (min-width: 480px) {
     .main-button
     {
