--- a/style/_banner.scss
+++ b/style/_banner.scss
@@ -13,8 +13,10 @@
 
     img{
         width: 100%;
+        max-width: 100%;
         height: 50vh;
         border-radius: 20px;
+        object-fit: cover;
     }
 }
 
@@ -36,8 +38,10 @@
         
         img{
             width: 100%;
+            max-width: 100%;
             height: 50vh;
             border-radius: 20px;
+            object-fit: cover;
         }
         .spinner
         {
