--- a/style/_card.scss
+++ b/style/_card.scss
@@ -24,9 +24,9 @@
 
 .card-plano
 {
-    width: 33%;
-    margin: 0 1%;
-    padding: 2%;
+    width: 100%;
+    margin: 2% 1%;
+    padding: 4% 2%;
     box-shadow: $shadow;
     border-radius: 20px;
    
@@ -63,10 +63,14 @@
 
 .card-info
 {
-    width: 33%;
-    margin: 0 1%;
-    height: 300px;
+    width: 100%;
+    margin: 8% 1%;
+    height: fit-content;
     padding: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     h3
     {
@@ -81,6 +85,7 @@
         height: 36px;
         width: 36px;
         margin: 0 32px;
+        object-fit: cover;
     }
 
 }
@@ -89,7 +94,23 @@
     .card-container
     {
         flex-direction: row;
-        justify-content: center;
-        align-items: center;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    .card-plano
+    {
+        width: 33%;
+        margin: 0% 1%;
+        padding: 2%;
+    }
+
+    .card-info
+    {
+        width: 33%;
+        margin: 0 1%;
+        height: 300px;
+        padding: 2%;
+        justify-content: flex-start;
     }
 }
