--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -1,10 +1,12 @@
 nav{
-    // height: 100vh;
-    // width: 100vw;
+    height: 100vh;
+    width: 100vw;
     position: absolute;
     top: 0;
     left: 0;
-    display: flex;
+    z-index: 9;
+    background: $bg-primary;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -18,18 +20,52 @@ nav{
     }
 }
 
+#menu-button
+{
+    display: inline;
+}
+
+#mobile-options{
+    width: 100%;
+    padding: 4%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    margin-bottom: 2%;
+    border-bottom: 1px $content-secondary solid;
+}
+
+.nav-buttons
+{
+    background: transparent;
+    border: 0;
+    font-size: 2rem;
+    font-weight: 700;
+}
+
 
 @media screen and (min-width: 480px) {
-nav
-{
-    height: auto;
-    width: 80%;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 32px;
+    nav
+    {
+        height: auto;
+        width: 80%;
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 32px;
 
-}
+    }
+
+    #menu-button
+    {
+        display: none;
+    }
+
+    #mobile-options{
+        display: none;
+    }
 }
