--- a/style/_text.scss
+++ b/style/_text.scss
@@ -12,7 +12,7 @@ h1{
 
 h2{
     font-size: 2.4rem;
-    margin-bottom: 2%;
+    margin: 2% 0;
 }
 
 h3{
@@ -22,4 +22,8 @@ h3{
 
 h4{
     font-size: 1.8rem;
+}
+
+li{
+    font-size: 1.2rem;
 }
