--- a/style/main.scss
+++ b/style/main.scss
@@ -66,6 +66,18 @@ body
     text-align: center;
 }
 
+.contact-form
+{
+    margin: 8% 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 32px;
+
+}
+
 footer
 {
     background: $content-secondary;
@@ -84,6 +96,22 @@ footer
     }
 }
 
+.hidden
+{
+    opacity: 0;
+    filter: blur(10px);
+    transform: translateX(-60%);
+    transition: all 2s;
+}
+
+.show
+{
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+    transition: all 2s;
+}
+
 @media screen and (min-width: 480px) {
     #about{
         display: flex;
@@ -94,6 +122,13 @@ footer
         width: 100%;
         height: 100%;     
         }
+    }
+
+    .contact-form
+    {
+        margin: 2% 0;
+        display: inline;
+        width: 100%;
     }
 
     footer
